# ColorWheel

./: .gitignore  .travis.yml  ColorWheel.pro  README.md  abstractcolorchooser.cpp  abstractcolorchooser.h  colorwheel.cpp  colorwheel.cpp.autosave  colorwheel.h  colorwheel.ui  form.cpp  form.h  form.ui  main.cpp  nkMath.h  nkVector3.h  phmath.cpp  phmath.h  phvector3.cpp  phvector3.h  phvector3x.h  pmath.cpp  pmath.h
src/: CMakeLists.txt  ColorWheel.pro  colorwheel.cpp  colorwheel.h  form.cpp  form.h  form.ui  main.cpp
